Move menu to align with the page content, Fixes #25

--- a/src/assets/less/structure.less
+++ b/src/assets/less/structure.less
@@ -15,6 +15,13 @@ body {
 	margin-bottom: 0;
 }
 
+.main-navigation > div {
+	margin: 0 auto;
+	max-width: @page-width;
+
+	.box-sizing();
+}
+
 body.single .hentry,
 body.page .hentry,
 body.search-results .site-main,
